--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visable content show to the user</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+   <h2>Git</h2>
+   <ul>
+    <li>git status: checks what branch we are currently on</li>
+    <li>git checkout -b branch name: creates a new branch and switches to it</li>
+    <li>git clean -f: removes unwanted files from our working directory</li>
+    <li>git add -A: stages a new file and commit all files in the working branch</li>
+    <li>git commit -m "commit message must be quoted": takes all the changes that have been made in the local environment and pushes it to the remote repository</li>
+    <li>git pull main origin: pulls changes from origin/main branch and merges them to the local environment checked out branch </li>
+   </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+   <h2>JavaScript</h2>
+   <ul>
+    <li>Enter your JavaScript notes here</li>
+   </ul>
+      </section>
     </main>
 
     <footer>
