--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -18,6 +18,7 @@
         <ul>
           <li>The head element contains information about the webpage</li>
           <li>The body element represents the visable content show to the user</li>
+          <li>The body element represents the visable content show to the user</li>
         </ul>
       </section>
    
