--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -16,7 +16,7 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>The head element contains information about the webpage.</li>
+          <li>The head element contains info about the webpage.</li>
           <li>The body element represents the visable content shown to the user.</li>
           <li>The body element represents the visable content shown to the user.</li>
         </ul>
